--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -2,9 +2,12 @@
   --color-white: #ffffff;
   --color-main-layout: #ffdf8c;
   --color-main: #FE5F1E;
-  --color-grey-1: #181818;
-  --color-grey-2: #7B7B7B;
-  --color-grey-3: ##F7F7F7;
+  --color-gray-1: #181818;
+  --color-gray-2: #7B7B7B;
+  --color-gray-3: #F7F7F7;
+  --color-gray-4: #2C2C2C;
+  --color-gray-5: #282828;
+  --color-gray-6: #F9F9F9;
   --font-size-1: 1.2rem;
   --font-size-2: 1.4rem;
   --font-size-3: 1.6rem;
@@ -17,5 +20,6 @@
   --line-height-5: 2.7rem;
   --line-height-6: 2.9rem;
   --line-height-7: 3.9rem;
+  --bold-weight: 700;
   --semi-bold-weight: 800;
 }
