--- a/src/components/Header/Logo/style.module.scss
+++ b/src/components/Header/Logo/style.module.scss
@@ -9,12 +9,12 @@
 .logoTitle {
   font-size: var(--font-size-5);
   line-height: var(--line-height-6);
-  color: var(--color-grey-1);
+  color: var(--color-gray-1);
   font-weight: var(--semi-bold-weight);
 }
 
 .logoSubptitle {
   font-size: var(--font-size-3);
   line-height: var(--line-height-2);
-  color: var(--color-grey-2);
+  color: var(--color-gray-2);
 }
