--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -9,14 +9,18 @@
   --color-gray-4: #2C2C2C;
   --color-gray-5: #282828;
   --color-gray-6: #F9F9F9;
+  --color-gray-7: #F3F3F3;
   --color-black-opac-1: rgba(0, 0 ,0 , 0.09);
   --color-black-opac-2: rgba(0, 0, 0 , 0.03);
+  --color-black-opac-3: rgba(0, 0, 0, 0.04);
   --color-main-opac-1: rgba(254, 95, 30, 0.05);
   --font-size-1: 1.2rem;
   --font-size-2: 1.4rem;
   --font-size-3: 1.6rem;
   --font-size-4: 2rem;
   --font-size-5: 2.4rem; 
+  --font-size-6: 3.2rem;
+  --font-size-7: 2.2rem;
   --line-height-1: 1.7rem;
   --line-height-2: 2rem;
   --line-height-3: 2.2rem;
