--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -13,6 +13,7 @@
   --color-black-opac-1: rgba(0, 0 ,0 , 0.09);
   --color-black-opac-2: rgba(0, 0, 0 , 0.03);
   --color-black-opac-3: rgba(0, 0, 0, 0.04);
+  --color-whire-opac-1: rgba(255, 255, 255, 0.3);
   --color-main-opac-1: rgba(254, 95, 30, 0.05);
   --font-size-1: 1.2rem;
   --font-size-2: 1.4rem;
