Компонент активной корзины, gitignor модифицирован под webstorm

--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -11,6 +11,10 @@
   --color-gray-6: #F9F9F9;
   --color-gray-7: #F3F3F3;
   --color-gray-8: #777777;
+  --color-gray-9: #F4F4F4;
+  --color-gray-10: #B6B6B6;
+  --color-gray-11: #CACACA;
+  --color-gray-12: #D3D3D3;
   --color-black-opac-1: rgba(0, 0 ,0 , 0.09);
   --color-black-opac-2: rgba(0, 0, 0 , 0.03);
   --color-black-opac-3: rgba(0, 0, 0, 0.04);
