--- a/src/assets/style/_variables.scss
+++ b/src/assets/style/_variables.scss
@@ -15,6 +15,8 @@
   --color-gray-10: #B6B6B6;
   --color-gray-11: #CACACA;
   --color-gray-12: #D3D3D3;
+  --color-gray-13: #8D8D8D;
+  --color-gray-14: #D7D7D7;
   --color-black-opac-1: rgba(0, 0 ,0 , 0.09);
   --color-black-opac-2: rgba(0, 0, 0 , 0.03);
   --color-black-opac-3: rgba(0, 0, 0, 0.04);
